--- a/app/views/layouts/monologue/application.html.erb
+++ b/app/views/layouts/monologue/application.html.erb
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
-<head>
-  <%= render 'layouts/monologue/application/head' %>
-</head>
-<body>
-  <div class="container">
-    <header class="main-header sixteen columns clearfix">
-      <%= rss_icon %>
-      <h1><a href="<%= root_path %>"><%=Monologue::Config.site_name%></a></h1>
-      <h2><%=Monologue::Config.site_subtitle%></h2>
-      <%= render partial: "layouts/monologue/application/social_icons" %>
-    </header>
+  <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+  <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+  <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+  <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+  <head>
+    <%= render 'layouts/monologue/application/head' %>
+  </head>
 
-    <div class="content twelve columns">
-      <% flash.each do |name, msg| %>
-        <div class="flash-notice">
-          <%= msg %>
-        </div>
-      <% end %>
+  <body>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      <%= yield %>
+      ga('create', 'UA-58122597-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+
+    <div class="container">
+      <header class="main-header sixteen columns clearfix">
+        <%= rss_icon %>
+
+        <h1><a href="<%= root_path %>"><%=Monologue::Config.site_name%></a></h1>
+        <h2><%=Monologue::Config.site_subtitle%></h2>
+
+        <%= render partial: "layouts/monologue/application/social_icons" %>
+      </header>
+
+      <div class="content twelve columns">
+        <% flash.each do |name, msg| %>
+          <div class="flash-notice">
+            <%= msg %>
+          </div>
+        <% end %>
+
+        <%= yield %>
+      </div>
+
+        <%= render 'layouts/monologue/application/sidebar' %>
     </div>
 
-      <%= render 'layouts/monologue/application/sidebar' %>
-  </div>
-  <% if content_for?(:footer) %>
-    <footer>
-      <%= yield :footer %>
-    </footer>
-  <% end %>
-  <%= render 'layouts/monologue/application/disqus' %>
-  <%= render 'layouts/monologue/application/gauge_analytics' %>
-</body>
+    <% if content_for?(:footer) %>
+      <footer>
+        <%= yield :footer %>
+      </footer>
+    <% end %>
+
+    <%= render 'layouts/monologue/application/disqus' %>
+    <%= render 'layouts/monologue/application/gauge_analytics' %>
+  </body>
 </html>
