--- a/app/views/monologue/posts/_post_header.html.erb
+++ b/app/views/monologue/posts/_post_header.html.erb
@@ -6,9 +6,9 @@
         <%= I18n.localize(post.published_at.to_date, format: :long) %>
       </time>
     </span>
-    <span data-monologue="user">
+    <!-- <span data-monologue="user">
       <%= post.user.name %>
-    </span>
+    </span> -->
     <span data-monologue="disqus">
       <a href="<%= post.full_url + "#disqus_thread" %>"></a>
     </span>
