--- a/app/views/monologue/sidebar/_latest_tweets.html.erb
+++ b/app/views/monologue/sidebar/_latest_tweets.html.erb
@@ -3,6 +3,7 @@
     <ul id="latest_tweets">
       <li id="tweet_template" style="display:none;">{{text}}</li>
     </ul>
-    <script type="text/javascript" src="https://api.twitter.com/1/statuses/user_timeline/<%= Monologue::Config.twitter_username %>.json?callback=TwitterWidget.callback&amp;count=5"></script>
+
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   <% end %>
 <% end %>
