--- a/app/views/monologue/sidebar/_latest_tweets.html.erb
+++ b/app/views/monologue/sidebar/_latest_tweets.html.erb
@@ -4,6 +4,7 @@
       <li id="tweet_template" style="display:none;">{{text}}</li>
     </ul>
 
+    <a class="twitter-timeline" href="https://twitter.com/MarcosSerpa" data-widget-id="595693867837558785">Tweets by @MarcosSerpa</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   <% end %>
 <% end %>
