Changes the page title; Removes page subtitle; Changes the about text.

--- a/app/views/layouts/monologue/application.html.erb
+++ b/app/views/layouts/monologue/application.html.erb
@@ -23,7 +23,7 @@
         <%= rss_icon %>
 
         <h1><a href="<%= root_path %>"><%=Monologue::Config.site_name%></a></h1>
-        <h2><%=Monologue::Config.site_subtitle%></h2>
+        <!-- <h2><%=Monologue::Config.site_subtitle%></h2> -->
 
         <%= render partial: "layouts/monologue/application/social_icons" %>
       </header>
