--- a/app/assets/stylesheets/monologue/blog/monologue.css
+++ b/app/assets/stylesheets/monologue/blog/monologue.css
@@ -176,7 +176,7 @@ a.social {
   font-weight: bold;
   line-height: 50px;
   color: #181818;
-  font-family: "Georgia", "Times New Roman", Helvetica, Arial, sans-serif;
+  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   display: block;
 }
 
