--- a/app/assets/stylesheets/monologue/blog/skeleton/base.css
+++ b/app/assets/stylesheets/monologue/blog/skeleton/base.css
@@ -64,7 +64,7 @@
 ================================================== */
   h1, h2, h3, h4, h5, h6 {
     color: #181818;
-    font-family: "Helvetica", sans-serif;
+    font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: normal; }
   h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
   h1 { font-size: 46px; line-height: 50px; margin-bottom: 14px;}
@@ -133,13 +133,13 @@
   input[type="submit"],
   input[type="reset"],
   input[type="button"] {
-    background: #eee; /* Old browsers */
-    background: #eee -moz-linear-gradient(top, rgba(255,255,255,.2) 0%, rgba(0,0,0,.2) 100%); /* FF3.6+ */
-    background: #eee -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.2)), color-stop(100%,rgba(0,0,0,.2))); /* Chrome,Safari4+ */
-    background: #eee -webkit-linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* Chrome10+,Safari5.1+ */
-    background: #eee -o-linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* Opera11.10+ */
-    background: #eee -ms-linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* IE10+ */
-    background: #eee linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* W3C */
+    /*background: #eee; /* Old browsers */
+    /*background: #eee -moz-linear-gradient(top, rgba(255,255,255,.2) 0%, rgba(0,0,0,.2) 100%); /* FF3.6+ */
+    /*background: #eee -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.2)), color-stop(100%,rgba(0,0,0,.2))); /* Chrome,Safari4+ */
+    /*background: #eee -webkit-linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* Chrome10+,Safari5.1+ */
+    /*background: #eee -o-linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* Opera11.10+ */
+    /*background: #eee -ms-linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* IE10+ */
+    /*background: #eee linear-gradient(top, rgba(255,255,255,.2) 0%,rgba(0,0,0,.2) 100%); /* W3C */
     border: 1px solid #aaa;
     border-top: 1px solid #ccc;
     border-left: 1px solid #ccc;
@@ -147,7 +147,7 @@
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
-    color: #444;
+    /*color: #444;*/
     display: inline-block;
     font-size: 11px;
     font-weight: bold;
@@ -157,21 +157,22 @@
     margin-bottom: 20px;
     line-height: normal;
     padding: 8px 10px;
-    font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+    font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
 
   .button:hover,
   button:hover,
   input[type="submit"]:hover,
   input[type="reset"]:hover,
   input[type="button"]:hover {
-    color: #222;
+    color: #FFF;
     background: #ddd; /* Old browsers */
-    background: #ddd -moz-linear-gradient(top, rgba(255,255,255,.3) 0%, rgba(0,0,0,.3) 100%); /* FF3.6+ */
-    background: #ddd -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.3)), color-stop(100%,rgba(0,0,0,.3))); /* Chrome,Safari4+ */
-    background: #ddd -webkit-linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(0,0,0,.3) 100%); /* Chrome10+,Safari5.1+ */
-    background: #ddd -o-linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(0,0,0,.3) 100%); /* Opera11.10+ */
-    background: #ddd -ms-linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(0,0,0,.3) 100%); /* IE10+ */
-    background: #ddd linear-gradient(top, rgba(255,255,255,.3) 0%,rgba(0,0,0,.3) 100%); /* W3C */
+    background: #ddd -moz-linear-gradient(top, rgba(0,0,0,.8) 0%, rgba(0,0,0,.8) 100%); /* FF3.6+ */
+    background: #ddd -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,.8)), color-stop(100%,rgba(0,0,0,.8))); /* Chrome,Safari4+ */
+    background: #ddd -webkit-linear-gradient(top, rgba(0,0,0,.8) 0%,rgba(0,0,0,.8) 100%); /* Chrome10+,Safari5.1+ */
+    background: #ddd -o-linear-gradient(top, rgba(0,0,0,.8) 0%,rgba(0,0,0,.8) 100%); /* Opera11.10+ */
+    background: #ddd -ms-linear-gradient(top, rgba(0,0,0,.8) 0%,rgba(0,0,0,.8) 100%); /* IE10+ */
+    background: #ddd linear-gradient(top, rgba(0,0,0,.8) 0%,rgba(0,0,0,.8) 100%); /* W3C */
     border: 1px solid #888;
     border-top: 1px solid #aaa;
     border-left: 1px solid #aaa; }
@@ -339,5 +340,3 @@
   .remove-bottom { margin-bottom: 0 !important; }
   .half-bottom { margin-bottom: 10px !important; }
   .add-bottom { margin-bottom: 20px !important; }
-
-
