Changes the about text.

--- a/app/views/monologue/sidebar/_about.html.erb
+++ b/app/views/monologue/sidebar/_about.html.erb
@@ -1,5 +1,5 @@
 <%= sidebar_section_for("About") do  %>
   <ul>
-    I'm Marcos Serpa, a Ruby/Rails and iOS developer trying to keep in mind - mainly in my lost mind - and share my coding experiences and dangerous cooking adventures.
+    I'm Marcos Serpa, a Ruby/Rails and iOS developer trying to keep in mind and share my coding experiences and cooking adventures.
   </ul>
 <% end %>
