Adds the certification seal to the main layout. Changes the about text.

--- a/app/assets/stylesheets/monologue/blog/application.css
+++ b/app/assets/stylesheets/monologue/blog/application.css
@@ -11,3 +11,13 @@
  *= require monologue/blog/fonts
  *= require monologue/blog/custom
 */
+
+.end_footer {
+  padding: 40px;
+}
+
+.seal {
+  width: 131px;
+  margin-left: auto;
+  margin-right: auto;
+}
