--- a/app/views/layouts/monologue/application.html.erb
+++ b/app/views/layouts/monologue/application.html.erb
@@ -49,5 +49,15 @@
 
     <%= render 'layouts/monologue/application/disqus' %>
     <%= render 'layouts/monologue/application/gauge_analytics' %>
+
+
+    <div class='end_footer'>
+      <div class='seal'>
+        <span id="siteseal">
+          <script type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=QUKH6cJdkjjWejBNY1enq5J6aOtOn0tgg6FekmNvLJeun4hUxBcDKQ7SHLJb">
+          </script>
+        </span>
+      </div>
+    </div>
   </body>
 </html>
