--- a/app/views/monologue/posts/show.html.erb
+++ b/app/views/monologue/posts/show.html.erb
@@ -9,6 +9,7 @@
 <article>
   <%= render partial: 'monologue/posts/post_header', locals: {post: @post }%>
   <div class="content" data-monologue="content">
+    <% byebug %>
     <%= raw @post.content %>
   </div>
 
@@ -22,4 +23,3 @@
   <%= render 'layouts/monologue/application/disqus_embed' %>
   <noscript>Please enable JavaScript to view the comments.</noscript>
 </article>
-
