--- a/app/views/layouts/monologue/application/_head.html.erb
+++ b/app/views/layouts/monologue/application/_head.html.erb
@@ -8,8 +8,10 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<%= stylesheet_link_tag    "monologue/blog/application" %>
+<%= stylesheet_link_tag "monologue/blog/application" %>
+<%= stylesheet_link_tag 'styles/default' %>
 <%= javascript_include_tag "monologue/blog/application" %>
+<%= javascript_include_tag 'highlight.pack' %>
 
 <!-- Mobile Specific Metas
 ================================================== -->
