Adds Google Analytics

--- a/app/views/layouts/monologue/application.html.erb
+++ b/app/views/layouts/monologue/application.html.erb
@@ -5,6 +5,7 @@
   <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
   <head>
     <%= render 'layouts/monologue/application/head' %>
+    <%= render 'layouts/google_analytics' %>
   </head>
 
   <body>
