--- a/app/views/monologue/sidebar/_about.html.erb
+++ b/app/views/monologue/sidebar/_about.html.erb
@@ -1,6 +1,5 @@
 <%= sidebar_section_for("About") do  %>
   <ul>
-    I'm Marcos Serpa, a Ruby/Rails and iOS developer trying to keep in mind and share my coding experiences and cooking adventures.
-    Just 'cause I'm a lazy guy and don't want to search again what a forget - like everything...
+    I'm Marcos Serpa, a Ruby/Rails and Android developer trying to keep in mind and share my coding experiences.
   </ul>
 <% end %>
